<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sign_box_margin_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/sign_box_padding"
            android:text="@string/top_remind_header"
            android:textColor="@color/colorEdit" />

        <View
            android:layout_width="@dimen/line_zero"
            android:layout_height="@dimen/line_one"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginRight="@dimen/margin_start_end"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/remind_logo_margin_bottom"
            android:maxHeight="@dimen/remind_logo_size"
            android:maxWidth="@dimen/remind_logo_size"
            android:src="@drawable/help_icon" />

        <EditText
            android:id="@+id/remind_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/remind_field_margin"
            android:background="@color/colorEdit"
            android:hint="@string/remind_username_hint"
            android:inputType="textNoSuggestions"
            android:padding="@dimen/sign_box_padding"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/remind_field_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/remind_sec_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorEdit"
                android:enabled="false"
                android:hint="@string/remind_sec_hint"
                android:inputType="textNoSuggestions"
                android:padding="@dimen/sign_box_padding"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/remind_sec_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/colorEdit"
                android:maxHeight="@dimen/register_logo_size"
                android:maxWidth="@dimen/register_logo_size"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_wrong" />

        </LinearLayout>


        <EditText
            android:id="@+id/remind_sec_q_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/register_field_margin_last"
            android:background="@color/colorEdit"
            android:hint="@string/remind_sec_q_hint"
            android:inputType="textNoSuggestions"
            android:padding="@dimen/sign_box_padding"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/remind_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/remind_button_margin"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/remind_button_text"
            android:textColor="@color/colorEdit"
            android:textSize="@dimen/center_log_in_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>