<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/search_fragment_view_margin"
    android:background="@color/colorSearch"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/search_fragment_movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/search_fragment_poster_width"
        android:scaleType="fitXY"
        android:src="@drawable/no_image_icon"
        android:tag="@string/app_omdb_empty_image_url" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/search_fragment_fav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_fragment_view_margin"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_action_star_off" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_fragment_movie_name_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tag="@string/search_fragment_title_default"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/search_fragment_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/search_fragment_movie_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tag="@string/search_fragment_id_default"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/search_fragment_text_size" />

            <TextView
                android:id="@+id/search_fragment_movie_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tag="@string/search_fragment_type_default"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/search_fragment_text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>