<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSearch"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/more_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorEdit" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/more_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/more_title_text_margin"
                android:gravity="start"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_movie_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/more_title_text_margin"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:text="@string/more_header_misc"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/more_movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:maxWidth="@dimen/more_poster_width"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_image_icon"
                    android:tag="@string/app_omdb_empty_image_url" />

                <TextView
                    android:id="@+id/more_movie_plot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/more_plot_text_margin"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:textColor="@color/colorEdit"
                    android:textSize="@dimen/more_general_text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/more_movie_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/more_ratings_text_margin"
                android:gravity="center"
                android:text="@string/more_header_ratings"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/more_title_text_margin"
                android:gravity="start"
                android:text="@string/more_header_cast"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_movie_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/more_actors_text_margin_bottom"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:text="@string/more_header_director"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_movie_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/more_title_text_margin"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:text="@string/more_header_writer"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_movie_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/more_title_text_margin"
                android:gravity="start"
                android:textColor="@color/colorEdit"
                android:textSize="@dimen/more_general_text_size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>